--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: go
+sudo: false
 go: 1.7
+before_install:
+  - go get github.com/mattn/goveralls
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
 install: go get -t -v ./...
 
 notifications:
