--- a/config_example.json
+++ b/config_example.json
@@ -2,6 +2,7 @@
 	"Conf":"8888",
 	"Port":"8443",
 	"Debug":false,
+	"Logfile": "/var/log/helix.log",
 	"Root":".",
 	"Cert":"test_cert.pem",
 	"Key":"test_key.pem"
